fix pagination button overflow

--- a/Assets/css/search.css
+++ b/Assets/css/search.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  padding-bottom: 60px;
   /* overflow: hidden; Prevents scrolling on the body */
 }
 
@@ -32,6 +33,9 @@ body {
   flex: 0 0 60%;
   max-width: 100%;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 /* Header Styles */
@@ -115,14 +119,6 @@ body {
 }
 
 /* youtube video styling */
-.searchresults-right {
-  flex: 0 0 60%;
-  max-width: 100%;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
 
 .video-container {
   display: grid;
@@ -163,9 +159,16 @@ iframe {
 } */
 
 #pagination-controls {
-  margin-top: auto;
-  padding: 20px 0;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background-color: #fff; /* Optional: Add background to ensure buttons are visible */
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for visual separation */
+  text-align: center;
+  z-index: 1000;
 }
 
 #pagination-controls button {
